# models/article.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"time"
+
 	"gorm.io/gorm"
 )
 
@@ -15,9 +16,9 @@ type Article struct {
 	Title        string    `binding:"required"`
 	Content      string    `gorm:"type:longtext"` //长文本
 	Preview      string    `binding:"required"`
-	Likes        int       `gorm:"default:0"`
-	Comments     []Comment `gorm:"foreignKey:ArticleID"` //这个模型以ArticleID作为外键
+	Likes        uint       `gorm:"default:0"`
 	Commentcount uint      `gorm:"column:comment_count;default:0"`
+	Comments     []Comment `gorm:"foreignKey:ArticleID"` //这个模型以ArticleID作为外键
 }
 
 type Comment struct {
@@ -26,15 +27,16 @@ type Comment struct {
 	User       *Users `gorm:"foreignKey:UserID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 	UserID     uint   `gorm:"index"`
 	ArticleID  uint   `gorm:"index"` // 给 ArticleID 加索引也
-	ParentID   *uint  //这里可以深究为啥用指针
 	Likes      int    `gorm:"default:0"`
+	ParentID   *uint  `gorm:"index"`//这里可以深究为啥用指针-父评论
+	Children []Comment  `gorm:"foreignKey:ParentID"` // 子评论
 }
 type UserLikeArticle struct { //关联表
-	UserID    uint `gorm:"primaryKey"`
-	ArticleID uint `gorm:"primaryKey"`
-	CreatedAt time.Time
+	UserID    uint      `gorm:"primaryKey"`
+	ArticleID uint      `gorm:"primaryKey"`
+	CreatedAt time.Time `gorm:"autoCreateTime"`
 }
 
-func (Article) TableName() string { return "articles" }
-func (Comment) TableName() string { return "comments" }
+func (Article) TableName() string         { return "articles" }
+func (Comment) TableName() string         { return "comments" }
 func (UserLikeArticle) TableName() string { return "UserLikeArticles" }
